correcting tooltip spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -405,7 +405,6 @@ footer small {
 #icons img {
   height: 9vh;
   padding-top: 16px;
-  flex: 1;
 }
 
 #icons {
